removed some slides from graphs presentation, add descriptives and boxplot to discussion 2 activity

--- a/discussion/2.graphs/graphs.tex
+++ b/discussion/2.graphs/graphs.tex
@@ -301,11 +301,11 @@ Components of good graphics:
 \end{frame}
 
 
-\begin{frame}
-\frametitle{Graphical integrity: summary}
-
-\hspace*{-1cm}\includegraphics[width=1.15\textwidth]{{figs/good_2}.png}
-\end{frame}
+%\begin{frame}
+%\frametitle{Graphical integrity: summary}
+%
+%\hspace*{-1cm}\includegraphics[width=1.15\textwidth]{{figs/good_2}.png}
+%\end{frame}
 
 
 \begin{frame}
@@ -334,11 +334,11 @@ Components of good graphics:
 \end{frame}
 
 
-\begin{frame}
-\frametitle{Tables: example 2}
-\centering
-\includegraphics[width=1\textwidth]{{figs/tables_2}.png}
-\end{frame}
+%\begin{frame}
+%\frametitle{Tables: example 2}
+%\centering
+%\includegraphics[width=1\textwidth]{{figs/tables_2}.png}
+%\end{frame}
 
 
 \end{document}
