updated with Chapter 0 slides

--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -27,3 +27,11 @@ This document contains R commands that you have learned, as well as a descriptio
 | `?` | Access a help file | `?summary` | Pull up the help file for the `summary` function | Discussion section 1, line 234 |
 | `install.packages` | Install an R package | `install.packages("survival")` | Install the package `survival`, which contains functions for survival analysis | Discussion section 1, line 258 |
 | `library` | Load an R package into the current R session (this must be done each time you open R!) | `library("uwIntroStats")` | Load the `uwIntroStats` package of functions into the current session | Discussion section 1, line 259 |
+| `hist` | Create a histogram | `hist(fev$age, xlab="Age (years)", ylab="Frequency", main="Histogram of Age")` | Create a histogram of `fev$age` (the age variable in the dataset called fev). Note that `xlab=`,`ylab=`, and `main=` are all optional arguments: if you supply them, it will update the x-axis, y-axis, and main titles, repsectively. If you just type `hist(fev$age)`, R will still create the same histogram, but with its default axis labels (which often are not very informative or professional looking). | Chapter 0 slides, slide 0.26 |
+| `boxplot` | Create a boxplot | `boxplot(fev$age, xlab="", ylab="Age (years)", main="Boxplot of Age")` | Create a boxplot of a `fev$age`. Like with `hist`, the `xlab`, `ylab`, and `main` are optional arguments that we supply in this example to update the axis and figure titles. | Chapter 0 slides, slide 0.27 |
+| `table` | Create a table of counts for a cateogrical variable | `table(fev$smoke)` | Count how many subjects in our fev dataset fall into the `smoke==1` category (smokers) and the `smoke==2` category (nonsmokers). | Chapter 0 slides, slide 0.28 |
+| `barplot` | Create a barplot | `barplot(table(fev$smoke))` | Create a barplot of the categorical variable `smoke` in the `fev` dataset. We have to provide the `barplot` function the table of counts in each category (from `table(fev$smoke)`) rather than giving it the list of smoking status for each child (`fev$smoke`). As with other types of plotting functions, `xlab`, `ylab`, and `main` are optional arguments that we could include. | Chapter 0 slides, slide 0.28 |
+| `subset` | Extract a subset of your dataset | `subset(fev,smoke==1)` | Create a new dataset that only includes the rows of the `fev` dataset where `smoke==1` (i.e., the data for the kids that smoke). | Chapter 0 slides, slide 0.30 |
+| `~` | Separate the left- and right-hand sides of a formula. Helps us plot one variable vs another. Will also be useful for fitting regression models (stay tuned). | `boxplot(fev$age ~ fev$smoke)` \ `plot(fev$fev ~ fev$age)` | The variable to the left of the `~` is the response variable and the variable to the right of the `~` is the explanatory variable. When used inside plotting functions, it tells us which variable goes on the y-axis (the response) and which goes on the x-axis (the explanatory). | Chapter 0 slides, slide 0.31 and 0.32 |
+| `plot` | Create a plot. | `plot(fev$fev ~ fev$age)` | Create a scatterplot of two variables, with the fev variable on the y-axis and the age variable on the x-axis.  | Chapter 0 slides, slide 0.32 | 
+| `mean` | Calculate the mean. | `mean(fev$fev)` | Calculates the average value of the fev variable in our fev dataset. | Chapter 0 slides, slide 0.37 | 
